--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +368,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** I would choose the model with maximum depth of 3. As the model with maximum depth of 1 suffers from high bias and the model with maximum depth of 4 and 5 suffer from high variance. Adding more training ponts to the model with maximum depth of 3 would not provide any significant benefit but would help the models that suffer from high variance."
+    "**Answer: ** I would choose the model with maximum depth of 3. As the model with maximum depth of 1 suffers from high bias and the model with maximum depth of 4 and 5 suffer from high variance. \n",
+    "Adding more training ponts would make training score to decrease slightly and make testing score increase slightly as both scores will get closer. Adding more training ponts to the model would not provide any significant benefit to the model. "
    ]
   },
   {
