--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -369,7 +369,18 @@
    "metadata": {},
    "source": [
     "**Answer: ** I would choose the model with maximum depth of 3. As the model with maximum depth of 1 suffers from high bias and the model with maximum depth of 4 and 5 suffer from high variance. \n",
-    "Adding more training ponts would make training score to decrease slightly and make testing score increase slightly as both scores will get closer. Adding more training ponts to the model would not provide any significant benefit to the model. "
+    "\n",
+    "Q) What happens to the score of the training curve as more training points are added?\n",
+    "\n",
+    "Adding more training points would make the score of the training curve will decrease slighly and get closer to the testing score and converge to the score of ~0.8.\n",
+    "\n",
+    "Q) What about the testing curve?\n",
+    "\n",
+    "On the other hand, adding more training points would make the score of the testing curve increase slightly to converge to the score of ~0.8.\n",
+    "\n",
+    "Q) Would having more training points benefit the model?\n",
+    "\n",
+    "Adding more training ponts to the model would not provide any significant benefit to the model. \n"
    ]
   },
   {
