Udacity machine learning nanodegree p2, #review 2

--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -492,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive Predictor: [Accuracy score: 0.2438, F-score: 0.2872]\n"
+      "Naive Predictor: [Accuracy score: 0.2478, F-score: 0.2917]\n"
      ]
     }
    ],
@@ -500,13 +500,14 @@
     "# TODO: Calculate accuracy\n",
     "#accuracy = float(n_greater_50k)/float(n_records)\n",
     "\n",
-    "true_positives = float(len(y_test[y_test == 1]))  #sum(y_test)\n",
+    "true_positives = float(len(income[income == 1]))  #sum(y_test)\n",
     "true_negatives = 0\n",
-    "false_positives = float(len(y_test[y_test == 0]))\n",
+    "false_positives = float(len(income[income == 0]))\n",
     "false_negatives = 0\n",
-    "total_records = float(len(y_test)) \n",
+    "total_records = float(len(income)) \n",
     "\n",
     "accuracy = true_positives/total_records\n",
+    "\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5\n",
     "b_square = 0.5**2\n",
@@ -894,8 +895,8 @@
     "\n",
     "|     Metric     | Benchmark Predictor | Unoptimized Model | Optimized Model |\n",
     "| :------------: | :-----------------: | :---------------: | :-------------: | \n",
-    "| Accuracy Score |       0.2438        |       0.8180      |   0.8681        |\n",
-    "| F-score        |       0.2872        |       0.6270      |   0.7453        |\n"
+    "| Accuracy Score |       0.2478        |       0.8180      |   0.8681        |\n",
+    "| F-score        |       0.2917        |       0.6270      |   0.7453        |\n"
    ]
   },
   {
@@ -934,13 +935,13 @@
     "I think numerical features will weight more since we did not applied one hot encoding them.\n",
     "So i believe;\n",
     "\n",
-    "| Rank |     Feature     |\n",
-    "| :--: | :-------------: |\n",
-    "|  1   |  education-num  |\n",
-    "|  2   |  age            |\n",
-    "|  3   |  capital-gain   |\n",
-    "|  4   |  capital-loss   |\n",
-    "|  5   |  house-per-week |"
+    "| Rank |     Feature     |     Reason     |\n",
+    "| :--: | :-------------: | :-------------:|\n",
+    "|  1   |  education-num  | I think the number of educational years completed represents how a person is willing to improve themself so i think, it is the most important feature among others |\n",
+    "|  2   |  age            | I consider age as experience and experienced people are getting payed more |\n",
+    "|  3   |  capital-gain   | I think people who earn more are more likely to investment more |\n",
+    "|  4   |  capital-loss   | Also, people who invest more can also lose money |\n",
+    "|  5   |  hours-per-week | I chose hours-per-week as fifth feature as i did not consider categorical features and people might get payed more if they work more |"
    ]
   },
   {
@@ -1037,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
